# CrewForge-API

./: .dockerignore  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml  example.env  pyproject.toml  schema.yml  test.env
.github/workflows/: django.yml  opencode.yml
apps/accounts/: admin.py  choices.py  consts.py  emails.py  tasks.py  urls.py
apps/accounts/factories/: files.py  invitations.py  organization_image.py  organizations.py
apps/accounts/filters/: files.py  invitation.py  members.py  organization.py  organization_image.py  organization_profile.py
apps/accounts/forms/: files.py
apps/accounts/managers/: files.py  member.py  organization.py  organization_image.py
apps/accounts/migrations/: 0001_initial.py
apps/accounts/mixins/: fields.py  filters.py  requests.py  serializers.py  views.py
apps/accounts/models/: files.py  invitation.py  member.py  organization.py  user.py
apps/accounts/permissions/: files.py  generics.py  invitation.py  member.py  organization.py  organization_image.py  organization_profile.py
apps/accounts/serializers/: auth.py  files.py  invitation.py  member.py  mixins.py  organization.py  organization_image.py  organization_profile.py  session.py  signup.py  user.py  user_profile.py
apps/accounts/tests/: test_auth.py  test_invitations.py  test_members.py  test_organizations.py  test_viewset_metaclass.py
apps/accounts/tests/test_auth/: test_crud.py  test_integration.py  test_permission.py  test_serializer.py
apps/accounts/tests/test_invitations/: test_choices.py  test_crud.py  test_filter.py  test_integration.py  test_model.py  test_permission.py  test_serializer.py
apps/accounts/tests/test_members/: test_crud.py  test_filter.py  test_integration.py  test_model.py  test_permission.py  test_serializer.py
apps/accounts/tests/test_organization_images/: test_choices.py  test_crud.py  test_filter.py  test_integration.py  test_model.py  test_permission.py  test_serializer.py
apps/accounts/tests/test_organization_profiles/: test_choices.py  test_crud.py  test_filter.py  test_integration.py  test_model.py  test_permission.py  test_serializer.py
apps/accounts/tests/test_organizations/: test_choices.py  test_crud.py  test_filter.py  test_integration.py  test_model.py  test_permission.py  test_serializer.py
apps/accounts/tests/test_session/: test_crud.py  test_integration.py  test_permission.py  test_serializer.py
apps/accounts/tests/test_session_config/: test_crud.py
apps/accounts/tests/test_signup/: test_crud.py  test_integration.py  test_model.py  test_permission.py  test_serializer.py
apps/accounts/tests/test_stored_files/: test_choices.py  test_crud.py  test_download.py  test_filter.py  test_integration.py  test_model.py  teste_filter.py  (+2 more)
apps/accounts/utils/: requests.py
apps/accounts/views/: auth.py  files.py  invitations.py  members.py  organization_images.py  organization_profiles.py  organizations.py  session.py  session_config.py  user_profile.py
apps/generics/: choices.py  exceptions.py  tasks.py
apps/generics/fields/: fields.py  relations.py
apps/generics/mails/: bases.py
apps/generics/mixins/: mixins.py  serializers.py
apps/generics/models/: abstracts.py
apps/generics/tests/: test_exceptions.py  test_pagination.py  test_serializer_mixins.py  test_utils.py
apps/generics/utils/: schema.py  serializers.py  strings.py
apps/teams/: admin.py
apps/teams/filters/: team.py  team_member.py
apps/teams/migrations/: 0001_initial.py
apps/teams/permissions/: team.py  team_member.py
apps/teams/serializers/: team.py  team_member.py
apps/teams/tests/: test_team_members.py  test_teams.py
apps/teams/views/: team_members.py  teams.py
config/: celery.py  urls.py
config/settings/: base.py  local.py  testing.py
docs/: architectural-patterns.md  behavioral-patterns.md  creational-patterns.md  frontend-integration-guide.md  structural-patterns.md  test-patterns.md
static/site/: site.webmanifest
(+16 files in other folders)
