[project]
name = "crew-forge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dj-database-url>=3.1.2",
    "django>=5.2,<5.3",
    "django-cors-headers>=4.9.0",
    "django-filter>=25.2",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-spectacular>=0.29.0",
    "drf-spectacular-sidecar>=2026.6.1",
    "gunicorn>=26.0.0",
    "pillow>=12.2.0",
    "psycopg>=3.3.4",
    "python-dotenv>=1.2.2",
    "uuid6>=2025.0.1",
    "whitenoise>=6.12.0",
]

[dependency-groups]
dev = [
    "django-extensions>=4.1",
    "djangorestframework-stubs>=3.17.0",
    "factory-boy>=3.3.3",
    "pytest-cov>=7.1.0",
    "pytest-django>=4.12.0",
    "ruff>=0.15.16",
]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py314"  # 3.14
extend-exclude = [
  ".venv",
  ".docker_venv",
  "migrations",
  "__pycache__",
  "**/migrations/**",
  "**/__pycache__/**",
  "**/__init__.py",
  "**/.docker_venv/**",
  "**/.venv/**",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "W"]

[tool.ruff.lint.isort]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
known-third-party = ["django", "rest_framework"]
default-section = "third-party"
split-on-trailing-comma = true

[tool.ruff.format]
quote-style = "single"
skip-magic-trailing-comma = false

[tool.pytest.ini_options]
addopts = "--cov=. --cov-report=term-missing"
python_files = [
    "tests.py",
    "test_*.py",
    "*_test.py",
    "tests/**/*.py"
]

[tool.coverage.run]
branch = true
omit = [
    "*/commands/*",
    "*/tests/*",
    "*/__init__.py",
    "config/settings/local.py",
    "config/settings/production.py",
    "manage.py",
    "wsgi.py",
    "asgi.py"
]

[tool.coverage.report]
exclude_also = [
    "def __str__",
]
